Added short InMemoryRepo test

--- a/src/GenericRepo/GenericRepository.Tests/GenericRepository.Tests.csproj
+++ b/src/GenericRepo/GenericRepository.Tests/GenericRepository.Tests.csproj
@@ -50,6 +50,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GenericRepo\GenericRepo.csproj">
+      <Project>{A22D4604-195E-4118-995D-E7D45D8CA490}</Project>
+      <Name>GenericRepo</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
